--- a/index.html
+++ b/index.html
@@ -22,14 +22,10 @@
         <h1> HAPPY </h1>
         <h3> WRITTEN BY...</h3>
         <h3> PUBLISHED BY...</h3>
+        <span> PHARRELLWILLIAMS.COM</span>
+        <img src ="https://s3.amazonaws.com/learn-verified/columbia-logo.png">
+        <span> COLUMBIARECORDS.COM</span>
 
-
-
-        <!-- span text 'PHARRELLWILLIAMS.COM' -->
-
-        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-
-        <!-- span text 'COLUMBIARECORDS.COM' -->
 
         <br>
 
